[package]
name = "danbooru_scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
danbooru = { path = "../danbooru" }
persistence = { path = "../persistence" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
serde_json = "1.0"
common = { path = "../common" }
tracing = "0.1.37"
media_assets = { path = "../media_assets" }