[package]
name = "media_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.11.14", features = ["stream"] }
uuid = { version = "1.3.0", features = [ "v4" ] }
common = { path = "../common" }
sha2 = "0.10.6"
futures-util = "0.3.26"
tracing = "0.1.37"
