[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
model = { path = "../model" }
async-trait = "0.1.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
common = { path = "../common" }
tracing = "0.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }