[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = { version = "1.4.1", features = ["traces"] }
tokio = { version = "1.32.0", features = ["full"] }
data-types = { path = "../common/data-types" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
async-trait = "0.1.73"
