[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
persistence = { path = "../persistence" }
danbooru_scraping = { path = "../danbooru_scraping" }
dotenvy = "0.15"
media_assets = { path = "../media_assets" }
tracing-subscriber = "0.3.16"
tracing-log = "0.1.3"
