[package]
name = "data-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99.17"
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.8"
